--- a/src/dune
+++ b/src/dune
@@ -1,4 +1,4 @@
 (library
  (name game)
  (public_name Game)
- (libraries lib tsdl tsdl-image yojson ANSITerminal))
+ (libraries lib tsdl tsdl-image tsdl-mixer yojson ANSITerminal))
